--- a/style.css
+++ b/style.css
@@ -1,63 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-body {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: #3e001f;
-}
-
-.container {
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  padding: 20px;
-  width: 400px;
-}
-
-.color-preview {
-  width: 100%;
-  height: 150px;
-  border-radius: 4px;
-  margin-bottom: 20px;
-}
-
-.slider {
-  margin-bottom: 10px;
-}
-
-label {
-  font-weight: bold;
-  display: block;
-}
-
-input[type="range"] {
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.color-code {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#copyButton {
-  padding: 5px 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-@media screen and (max-width: 576px) {
-  .container {
-    width: 80%;
-    margin-inline: auto;
-  }
-}
+@import url(https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);body{font-family:Poppins,sans-serif;margin:0;display:flex;justify-content:center;align-items:center;min-height:100vh;background-color:#3e001f}.container{background-color:#fff;border-radius:8px;box-shadow:rgba(60,64,67,.3) 0 1px 2px 0,rgba(60,64,67,.15) 0 2px 6px 2px;padding:20px;width:400px}.color-preview,input[type=range]{width:100%;margin-bottom:20px}.color-preview{height:150px;border-radius:4px}.slider{margin-bottom:10px}label{font-weight:700;display:block}.color-code{display:flex;justify-content:space-between;align-items:center}#copyButton{padding:5px 10px;background-color:#007bff;color:#fff;border:none;border-radius:4px;cursor:pointer}@media screen and (max-width:576px){.container{width:80%;margin-inline:auto}}
